@@ -13,7 +13,8 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 - [API_PARSER] [UBIKA] New collector
 ### Changed
 - [API_PARSER] [BLACKBERRY_CYLANCE] Stop collector earlier and wait for next run when rate-limited by the API
-- [APPLICATIONS] [LOGOMELASTICSEARCH] Convert x509_certificate to tls_profile
+- [APPLICATIONS] [LOGOMELASTICSEARCH] Allow use of a TLS Profile instead of a simple X509 Certificate
+- [SYSTEM] [TLS_PROFILE] Reorder parameters into 2 separate sections
 ### Fixed
 - [API_PARSER] [BEYONDTRUST_REPORTINGS] Fix parsing of support session logs
 - [API_PARSER] [PROOFPOINT_POD] Increment the last_api_call of 1 second to avoid duplication
